--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,4 @@ dependencies = [
 requires-python = ">=3.10"
 
 [tool.setuptools]
-packages = ["event", "kafka_event"]
+py_modules = ["event", "kafka_event"]
