--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ requires-python = ">=3.10"
 
 [tool.setuptools]
 py-modules = ["event", "kafka_event"]
-script-files = [
-    "install = 'import subprocess\nsubprocess.run([\"pip\", \"install\", \"-r\", \"requirements.txt\"])\n'",
-]
+
+[scripts]
+post_install = 'pip install -r requirements.txt'
