--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,12 @@
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
-[project]
+[tool.poetry]
 name = "events"
 version = "2024.18.05"
 readme = "README.md"
-dependencies = [
-  "kafka-python>=2.0",
-]
-requires-python = ">=3.10"
 
-[tool.setuptools]
-py-modules = ["event", "kafka_event"]
+[tool.poetry.dependencies]
+python = "^3.12"
+kafka-python = ^2.4
