--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,14 @@
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
 [tool.poetry]
 name = "events"
-version = "2024.26.05"
-description = ""
-authors = ["John Smith <john@example.com>"]
-readme = "README.md"
-packages = [
-    { include = "__init__.py" },
-    { include = "event.py" },
-    { include = "kafka_event.py" },
-]
+version = "0.1.0"
+description = "A package for managing events and Kafka integration."
+authors = ["Your Name <you@example.com>"]
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
 kafka-python = "^2.0.2"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
